@@ -88,6 +88,7 @@ following names for their contribution to the product.
 * Jeremy Baron
 * Jidanni
 * Jimmy Xu
+* John Du Hart
 * Karun Dambietz
 * Kim Hyun-Joon
 * Lee Worden
